// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OwnerLookup Should render lookup value 1`] = `
<div>
  <p>
    [team-guid1] Shko Online
  </p>
  <button>
    Assign To Myself
  </button>
</div>
`;

exports[`OwnerLookup Should update value on click 1`] = `
<body>
  <div>
    <p>
      [systemuser-MyUserId] Assigned from PCF
    </p>
    <button>
      Assign To Myself
    </button>
  </div>
</body>
`;
